# dhl-in-ocaml

./: .#compile.ml  .gitignore  1  Makefile  README.md  cloc.sh  compile.ml  count_lines.sh  debug_syntax.ml  debug_vm.ml  dhl.opam  dune-project  eval.ml  find_atom.ml  findatom.ml  lexer.mll  main.ml  parser.mly  preprocess.ml  pushatom.ml  syntax.ml  test.ml  test.sh  util.ml  vm.ml
.github/workflows/: blank.yml  build.yml
doc/: README.md  index.html  index.org  memo.org  memo_match.org  memory_management.html  memory_management.org  memory_management.org_archive
docs/: index.html  index.md  index.org  index.org_archive
example/: append.dhl  test.lmn  test3.dhl  test4.dhl
scripts/: cloc.sh  count_lines.sh  dep_graph.py
src/: Makefile  README.md  alpha.ml  breakdown.ml  debug_vm.ml  dhl.ml  dune  eval.ml  findatom.ml  heap.ml  link_check.ml  main.ml  match.ml  parser.mly  preprocess.ml  pushatom.ml  pushout.ml  redir.ml  syntax.ml  util.ml  vm.ml
test/: append.dhl  test.sh
